--- a/WEIGHTLIFTING Watch App/Resources/WatchAppInfo.plist
+++ b/WEIGHTLIFTING Watch App/Resources/WatchAppInfo.plist
@@ -18,6 +18,17 @@
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
 	<string>$(MARKETING_VERSION)</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLName</key>
+			<string>com.jawaadmahmood.WEIGHTLIFTING2</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>weightlifting</string>
+			</array>
+		</dict>
+	</array>
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>UISupportedInterfaceOrientations</key>
@@ -28,17 +39,6 @@
 	<key>WKApplication</key>
 	<true/>
 	<key>WKCompanionAppBundleIdentifier</key>
-	<string>com.jawaadmahmood.WEIGHTLIFTING</string>
-	<key>CFBundleURLTypes</key>
-	<array>
-		<dict>
-			<key>CFBundleURLName</key>
-			<string>com.jawaadmahmood.WEIGHTLIFTING</string>
-			<key>CFBundleURLSchemes</key>
-			<array>
-				<string>weightlifting</string>
-			</array>
-		</dict>
-	</array>
+	<string>com.jawaadmahmood.WEIGHTLIFTING2</string>
 </dict>
 </plist>
