--- a/WEIGHTLIFTING.xcodeproj/xcshareddata/xcschemes/WEIGHTLIFTING ComplicationsExtension.xcscheme
+++ b/WEIGHTLIFTING.xcodeproj/xcshareddata/xcschemes/WEIGHTLIFTING ComplicationsExtension.xcscheme
@@ -74,12 +74,21 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
+            BlueprintIdentifier = "4CE325AF2EBC880A000753AE"
+            BuildableName = "WEIGHTLIFTING ComplicationsExtension.appex"
+            BlueprintName = "WEIGHTLIFTING ComplicationsExtension"
+            ReferencedContainer = "container:WEIGHTLIFTING.xcodeproj">
+         </BuildableReference>
+      </BuildableProductRunnable>
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
             BlueprintIdentifier = "4CCCDDD72EB1ABBD0013B7A6"
             BuildableName = "WEIGHTLIFTING.app"
             BlueprintName = "WEIGHTLIFTING"
             ReferencedContainer = "container:WEIGHTLIFTING.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </MacroExpansion>
       <EnvironmentVariables>
          <EnvironmentVariable
             key = "_XCWidgetKind"
