--- a/WEIGHTLIFTING.xcodeproj/xcshareddata/xcschemes/WEIGHTLIFTING ComplicationsExtension.xcscheme
+++ b/WEIGHTLIFTING.xcodeproj/xcshareddata/xcschemes/WEIGHTLIFTING ComplicationsExtension.xcscheme
@@ -57,6 +57,19 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
       shouldAutocreateTestPlan = "YES">
+      <Testables>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "4C54F2CD2EE10ACB00BD82B7"
+               BuildableName = "WEIGHTLIFTINGTests.xctest"
+               BlueprintName = "WEIGHTLIFTINGTests"
+               ReferencedContainer = "container:WEIGHTLIFTING.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+      </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
