--- a/WEIGHTLIFTING.xcodeproj/xcshareddata/xcschemes/WEIGHTLIFTING.xcscheme
+++ b/WEIGHTLIFTING.xcodeproj/xcshareddata/xcschemes/WEIGHTLIFTING.xcscheme
@@ -27,8 +27,29 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES"
-      shouldAutocreateTestPlan = "YES">
+      shouldUseLaunchSchemeArgsEnv = "YES">
+      <TestPlans>
+         <TestPlanReference
+            reference = "container:WEIGHTLIFTING.xctestplan"
+            default = "YES">
+         </TestPlanReference>
+         <TestPlanReference
+            reference = "container:WEIGHTLIFTING2.xctestplan">
+         </TestPlanReference>
+      </TestPlans>
+      <Testables>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "4C54F2CD2EE10ACB00BD82B7"
+               BuildableName = "WEIGHTLIFTINGTests.xctest"
+               BlueprintName = "WEIGHTLIFTINGTests"
+               ReferencedContainer = "container:WEIGHTLIFTING.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+      </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
